Release admin events