@@ -4,6 +4,7 @@ import dto.ViewStatsDto;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.StatsClient;
@@ -12,6 +13,7 @@ import ru.practicum.event.dto.*;
 import ru.practicum.event.mapper.EventMapper;
 import ru.practicum.event.model.Event;
 import ru.practicum.event.repository.EventRepository;
+import ru.practicum.event.utill.EventGetAdminParam;
 import ru.practicum.event.utill.State;
 import ru.practicum.exception.ConflictResource;
 import ru.practicum.exception.NotFoundResource;
@@ -29,6 +31,8 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.function.Function;
 import java.util.stream.Collectors;
+
+import static ru.practicum.event.specification.EventSpecification.*;
 
 @Service
 @RequiredArgsConstructor
@@ -61,44 +65,45 @@ public class EventServiceImp implements EventService {
     @Override
     public List<EventShortDto> getAll(long userId, int from, int size) {
         Pageable pageable = PageRequest.of(from / size, size);
+        List<Event> events = eventRepository.findByInitiatorId(userId, pageable).stream().toList();
 
-        Map<Long, Event> eventMap = eventRepository.findByInitiatorId(userId, pageable).stream()
-                .collect(Collectors.toMap(Event::getId, Function.identity()));
+//        Map<Long, Event> eventMap = eventRepository.findByInitiatorId(userId, pageable).stream()
+//                .collect(Collectors.toMap(Event::getId, Function.identity()));
+//
+//        if (!eventMap.isEmpty()) {
+//            Map<Long, Long> eventCountRequest = requestRepository.findAllByEventIdInAndStatus(eventMap.keySet(),
+//                            Status.CONFIRMED).stream()
+//                    .collect(Collectors.groupingBy(request -> request.getEvent().getId(),
+//                            Collectors.counting()));
+//
+//            List<String> listUrl = eventMap.keySet().stream()
+//                    .map(EVENT_URI_PATTERN::formatted)
+//                    .collect(Collectors.toList());
+//
+//            Optional<LocalDateTime> start = eventMap.values().stream()
+//                    .map(Event::getCreatedOn)
+//                    .min(LocalDateTime::compareTo);
+//
+//            Map<String, Long> statsCount = statsClient
+//                    .getStats(start.orElse(LocalDateTime.now().minusYears(1)), LocalDateTime.now(), listUrl, true)
+//                    .stream()
+//                    .collect(Collectors.toMap(ViewStatsDto::getUri, ViewStatsDto::getHits));
+//
+//            eventMap = eventMap.values().stream()
+//                    .map(event -> {
+//                        Long confirmedRequests = eventCountRequest.getOrDefault(event.getId(), 0L);
+//                        Long views = statsCount.getOrDefault(EVENT_URI_PATTERN.formatted(event.getId()), 0L);
+//                        return event.toBuilder()
+//                                .confirmedRequests(confirmedRequests)
+//                                .views(views)
+//                                .build();
+//                    })
+//                    .collect(Collectors.toMap(Event::getId, Function.identity()));
+//        }
 
-        if (!eventMap.isEmpty()) {
-            Map<Long, Long> eventCountRequest = requestRepository.findAllByEventIdInAndStatus(eventMap.keySet(),
-                            Status.CONFIRMED).stream()
-                    .collect(Collectors.groupingBy(request -> request.getEvent().getId(),
-                            Collectors.counting()));
-
-            List<String> listUrl = eventMap.keySet().stream()
-                    .map(EVENT_URI_PATTERN::formatted)
-                    .collect(Collectors.toList());
-
-            Optional<LocalDateTime> start = eventMap.values().stream()
-                    .map(Event::getCreatedOn)
-                    .min(LocalDateTime::compareTo);
-
-            Map<String, Long> statsCount = statsClient
-                    .getStats(start.orElse(LocalDateTime.now().minusYears(1)), LocalDateTime.now(), listUrl, true)
-                    .stream()
-                    .collect(Collectors.toMap(ViewStatsDto::getUri, ViewStatsDto::getHits));
-
-            eventMap = eventMap.values().stream()
-                    .map(event -> {
-                        Long confirmedRequests = eventCountRequest.getOrDefault(event.getId(), 0L);
-                        Long views = statsCount.getOrDefault(EVENT_URI_PATTERN.formatted(event.getId()), 0L);
-                        return event.toBuilder()
-                                .confirmedRequests(confirmedRequests)
-                                .views(views)
-                                .build();
-                    })
-                    .collect(Collectors.toMap(Event::getId, Function.identity()));
-        }
-
-        return eventMap.values().stream()
+        return updateEventFieldStats(events).stream()
                 .map(EventMapper::mapToEventShortDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -193,16 +198,50 @@ public class EventServiceImp implements EventService {
     }
 
     @Override
-    public List<EventFullDto> getEventsByAdmin(List<Long> users, List<State> states, List<Long> categories,
-                                               LocalDateTime rangeStart, LocalDateTime rangeEnd, int from, int size) {
-        // TODO: Implement admin events retrieval
-        return List.of();
+    public List<EventFullDto> getEventsByAdmin(EventGetAdminParam param) {
+        Pageable pageable = PageRequest.of(param.getFrom() / param.getSize(), param.getSize());
+        Specification<Event> specification = Specification.where(null);
+
+        if (param.getUsers() != null)
+            specification = specification.and(byUser(param.getUsers()));
+
+        if (param.getStates() != null)
+            specification = specification.and(byStates(param.getStates()));
+
+        if (param.getCategories() != null)
+            specification = specification.and(byCategories(param.getCategories()));
+
+        if (param.getRangeStart() != null)
+            specification = specification.and(byRangeStart(param.getRangeStart()));
+
+        if (param.getRangeEnd() != null)
+            specification = specification.and(byRangeEnd(param.getRangeEnd()));
+
+        List<Event> events = eventRepository.findAll(specification, pageable).stream().toList();
+
+//        return eventRepository.findAll(specification, pageable).stream()
+//                .map(EventMapper::mapToEventFullDto)
+//                .toList();
+
+        return updateEventFieldStats(events).stream()
+                .map(EventMapper::mapToEventFullDto)
+                .toList();
     }
 
     @Override
+    @Transactional
     public EventFullDto updateEventByAdmin(long eventId, UpdateEventAdminRequest updateEventAdminRequest) {
-        // TODO: Implement admin event update
-        return null;
+        Event event = eventRepository.findById(eventId).orElseThrow(
+                () -> new NotFoundResource("Событие %d не найдено".formatted(eventId)));
+
+        checkUpdateEventAdmin(event, updateEventAdminRequest);
+
+        if (updateEventAdminRequest.getCategory() != null)
+            updateEventAdminRequest.setCategoryObj(categoryService.getCategoryById(
+                    updateEventAdminRequest.getCategory()));
+
+        EventMapper.updateEventFromAdminRequest(event, updateEventAdminRequest);
+        return EventMapper.mapToEventFullDto(eventRepository.save(event));
     }
 
     @Override
@@ -259,8 +298,69 @@ public class EventServiceImp implements EventService {
         List<ViewStatsDto> listStats = statsClient.getStats(start, LocalDateTime.now(),
                 List.of(EVENT_URI_PATTERN.formatted(eventId)), true);
         if (!listStats.isEmpty()) {
-            return listStats.get(0).getHits();
+            return listStats.getFirst().getHits();
         }
         return 0L;
+    }
+
+    private void checkUpdateEventAdmin(Event event, UpdateEventAdminRequest updateEvent) {
+        LocalDateTime eventDate;
+
+        if (updateEvent.hasStateAction())
+            switch (updateEvent.getStateAction()) {
+                case PUBLISH_EVENT:
+                    if (!event.getState().equals(State.PENDING))
+                        throw new ConflictResource("Событие можно публиковать только в статусе 'Ожидание'");
+                    break;
+                case REJECT_EVENT:
+                    if (event.getState().equals(State.PUBLISHED))
+                        throw new ConflictResource("Событие можно отклонить, только если оно еще не опубликовано");
+                    break;
+            }
+
+        if (updateEvent.hasEventDate())
+            eventDate = updateEvent.getEventDate();
+        else
+            eventDate = event.getEventDate();
+
+        if (!eventDate.isAfter(LocalDateTime.now().minusHours(1)))
+            throw new ConflictResource(
+                    "Дата начала изменяемого события должна быть не ранее чем за час от даты публикации");
+    }
+
+    private List<Event> updateEventFieldStats(List<Event> events) {
+        if (events.isEmpty())
+            return events;
+
+        Map<Long, Event> eventMap = events.stream()
+                .collect(Collectors.toMap(Event::getId, Function.identity()));
+
+        Map<Long, Long> eventCountRequest = requestRepository.findAllByEventIdInAndStatus(eventMap.keySet(),
+                        Status.CONFIRMED).stream()
+                .collect(Collectors.groupingBy(request -> request.getEvent().getId(),
+                        Collectors.counting()));
+
+        List<String> listUrl = eventMap.keySet().stream()
+                .map(EVENT_URI_PATTERN::formatted)
+                .collect(Collectors.toList());
+
+        Optional<LocalDateTime> start = eventMap.values().stream()
+                .map(Event::getCreatedOn)
+                .min(LocalDateTime::compareTo);
+
+        Map<String, Long> statsCount = statsClient
+                .getStats(start.orElse(LocalDateTime.now().minusYears(1)), LocalDateTime.now(), listUrl, true)
+                .stream()
+                .collect(Collectors.toMap(ViewStatsDto::getUri, ViewStatsDto::getHits));
+
+        return eventMap.values().stream()
+                .map(event -> {
+                    Long confirmedRequests = eventCountRequest.getOrDefault(event.getId(), 0L);
+                    Long views = statsCount.getOrDefault(EVENT_URI_PATTERN.formatted(event.getId()), 0L);
+                    return event.toBuilder()
+                            .confirmedRequests(confirmedRequests)
+                            .views(views)
+                            .build();
+                }).toList();
     }
 }
